# model-run-submission

./: .gitignore  README.md  pyproject.toml
backend/: api.http  data.py  main.py  models.py
backend/data/: final_runs.json  model_runs.json
frontend/: main.py
