[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "polars>=1.19.0",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pyright[nodejs]>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]
